<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
                android:layout_width = "match_parent"
                android:layout_height = "match_parent"
                android:orientation = "vertical">

    <RelativeLayout
        android:layout_width = "match_parent"
        android:layout_height = "@dimen/topbar_height"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentTop = "true"
        android:id = "@+id/layoutTopBar">

        <ImageView
            android:layout_width = "match_parent"
            android:layout_height = "match_parent"
            android:layout_alignParentTop = "true"
            android:layout_centerHorizontal = "true"
            android:adjustViewBounds = "true"
            android:contentDescription = "@string/app_name"
            android:scaleType = "fitXY"
            android:src = "@drawable/top_bar"/>

        <ImageButton
            android:layout_width = "@dimen/topbar_button_width"
            android:layout_height = "@dimen/topbar_button_width"
            android:layout_alignParentLeft = "true"
            android:layout_centerVertical = "true"
            android:layout_marginLeft = "10dp"
            android:background = "@color/clear_back"
            android:contentDescription = "@string/app_name"
            android:id = "@+id/buttonBack"
            android:scaleType = "fitXY"
            android:src = "@drawable/ic_back"/>

        <ImageButton
            android:layout_width = "@dimen/topbar_button_width"
            android:layout_height = "@dimen/topbar_button_width"
            android:layout_alignParentBottom = "true"
            android:layout_alignParentRight = "true"
            android:layout_marginBottom = "5dp"
            android:layout_marginRight = "10dp"
            android:background = "@color/clear_back"
            android:contentDescription = "@string/app_name"
            android:id = "@+id/buttonCall"
            android:scaleType = "fitXY"
            android:src = "@drawable/ic_call_white"
            android:visibility = "gone"/>

        <RelativeLayout
            android:layout_width = "wrap_content"
            android:layout_height = "@dimen/topbar_button_width"
            android:layout_alignParentRight = "true"
            android:layout_centerVertical = "true"
            android:layout_marginRight = "10dp"
            android:background = "@color/clear_back"
            android:contentDescription = "@string/app_name"
            android:id = "@+id/relativeDone"
            android:scaleType = "fitXY"
            android:visibility = "invisible">

            <TextView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_centerVertical = "true"
                android:id = "@+id/txtDone"
                android:text = "@string/done"
                android:textColor = "@color/white"
                android:textSize = "@dimen/text_size1"/>
        </RelativeLayout>

        <TextView
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_centerVertical = "true"
            android:layout_marginLeft = "5dp"
            android:layout_marginRight = "5dp"
            android:layout_toLeftOf = "@id/relativeDone"
            android:layout_toRightOf = "@id/buttonBack"
            android:gravity = "center"
            android:id = "@+id/txtPhoneNumber"
            android:text = "@string/info"
            android:textColor = "@color/white"
            android:textSize = "@dimen/text_size1"/>
    </RelativeLayout>

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_below = "@+id/layoutTopBar"
        android:layout_centerHorizontal = "true"
        android:layout_marginTop = "40dp"
        android:id = "@+id/textView1"
        android:text = "@string/verify1"/>

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_below = "@+id/textView1"
        android:layout_centerHorizontal = "true"
        android:id = "@+id/textView2"
        android:text = "@string/verify2"/>

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_below = "@+id/textView2"
        android:layout_centerHorizontal = "true"
        android:layout_marginTop = "25dp"
        android:id = "@+id/textView3"
        android:text = "@string/verify3"/>

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_below = "@+id/textView3"
        android:layout_centerHorizontal = "true"
        android:id = "@+id/textView4"
        android:text = "@string/verify4"/>

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_below = "@+id/textView4"
        android:layout_centerHorizontal = "true"
        android:id = "@+id/textView5"
        android:text = "@string/verify5"/>

    <EditText
        android:layout_width = "150dp"
        android:layout_height = "wrap_content"
        android:layout_below = "@+id/textView5"
        android:layout_centerHorizontal = "true"
        android:layout_marginTop = "15dp"
        android:background = "@drawable/apptheme_edit_text_holo_light"
        android:ems = "10"
        android:id = "@+id/etVCode"
        android:inputType = "number">

        <requestFocus/>
    </EditText>

    <Button
        android:layout_width = "150dp"
        android:layout_height = "50dp"
        android:layout_below = "@+id/etVCode"
        android:layout_centerHorizontal = "true"
        android:layout_marginTop = "15dp"
        android:background = "@drawable/continue_button"
        android:id = "@+id/btnVCont"
        android:text = "@string/cont"
        android:textColor = "@color/white"
        android:textSize = "@dimen/text_size1"/>

</RelativeLayout>