<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
                android:layout_width = "match_parent"
                android:layout_height = "match_parent"
                android:background = "@color/greyish"
                android:orientation = "vertical">

    <RelativeLayout
        android:layout_width = "match_parent"
        android:layout_height = "@dimen/topbar_height"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentTop = "true"
        android:id = "@+id/layoutTopBar">

        <ImageView
            android:layout_width = "match_parent"
            android:layout_height = "match_parent"
            android:layout_alignParentTop = "true"
            android:layout_centerHorizontal = "true"
            android:adjustViewBounds = "true"
            android:contentDescription = "@string/app_name"
            android:scaleType = "fitXY"
            android:src = "@drawable/top_bar"/>

        <ImageButton
            android:layout_width = "@dimen/topbar_button_width"
            android:layout_height = "@dimen/topbar_button_width"
            android:layout_alignParentBottom = "true"
            android:layout_alignParentRight = "true"
            android:layout_marginBottom = "5dp"
            android:layout_marginRight = "10dp"
            android:background = "@color/clear_back"
            android:contentDescription = "@string/app_name"
            android:id = "@+id/buttonCall"
            android:scaleType = "fitXY"
            android:src = "@drawable/ic_call_white"
            android:visibility = "gone"/>

        <RelativeLayout
            android:layout_width = "wrap_content"
            android:layout_height = "@dimen/topbar_button_width"
            android:layout_alignParentRight = "true"
            android:layout_centerVertical = "true"
            android:layout_marginRight = "10dp"
            android:background = "@color/clear_back"
            android:contentDescription = "@string/app_name"
            android:id = "@+id/relativeDone"
            android:scaleType = "fitXY"
            android:visibility = "invisible">

            <TextView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_centerVertical = "true"
                android:id = "@+id/txtDone"
                android:text = "@string/done"
                android:textColor = "@color/white"
                android:textSize = "@dimen/text_size1"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width = "wrap_content"
            android:layout_height = "@dimen/topbar_button_width"
            android:layout_alignParentRight = "true"
            android:layout_centerVertical = "true"
            android:layout_marginRight = "10dp"
            android:background = "@color/clear_back"
            android:contentDescription = "@string/app_name"
            android:id = "@+id/relativeSkip"
            android:scaleType = "fitXY"
            android:visibility = "visible">

            <TextView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_centerVertical = "true"
                android:id = "@+id/txtSkip"
                android:text = "@string/skip"
                android:textColor = "@color/white"
                android:textSize = "@dimen/text_size1"/>
        </RelativeLayout>

        <TextView
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_centerVertical = "true"
            android:layout_marginLeft = "5dp"
            android:layout_marginRight = "5dp"
            android:layout_toLeftOf = "@id/relativeSkip"
            android:layout_toRightOf = "@id/buttonBack"
            android:gravity = "center_horizontal"
            android:text = "@string/phone_number"
            android:textColor = "@color/white"
            android:textSize = "@dimen/text_size1"/>
    </RelativeLayout>

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_below = "@+id/layoutTopBar"
        android:layout_centerHorizontal = "true"
        android:layout_marginTop = "50dp"
        android:id = "@+id/txtNumberDesc"
        android:text = "@string/numberDesc"/>

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_below = "@+id/txtNumberDesc"
        android:layout_centerHorizontal = "true"
        android:id = "@+id/txtNumberDesc2"
        android:text = "@string/numberDesc2"/>

    <RelativeLayout
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:layout_below = "@+id/txtNumberDesc2"
        android:layout_marginLeft = "30dp"
        android:layout_marginTop = "20dp"
        android:id = "@+id/rel">

        <TextView
            android:layout_width = "fill_parent"
            android:layout_height = "1dp"
            android:background = "#BABABA"
            android:id = "@+id/txtDivider">
        </TextView>

        <RelativeLayout
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_below = "@+id/txtDivider"
            android:id = "@+id/relative">

            <TextView
                android:layout_width = "fill_parent"
                android:layout_height = "wrap_content"
                android:layout_alignParentLeft = "true"
                android:layout_toLeftOf = "@+id/imgArrow"
                android:id = "@+id/txtCountryName"
                android:padding = "10dp"
                android:text = "United States"
                android:textColor = "@color/black"
                android:textSize = "@dimen/text_size2"/>

            <ImageView
                android:layout_width = "30dp"
                android:layout_height = "30dp"
                android:layout_alignParentRight = "true"
                android:layout_centerVertical = "true"
                android:layout_marginRight = "10dp"
                android:id = "@+id/imgArrow"/>
        </RelativeLayout>

        <TextView
            android:layout_width = "fill_parent"
            android:layout_height = "1dp"
            android:layout_below = "@+id/relative"
            android:background = "#BABABA"
            android:id = "@+id/txtDivider1">
        </TextView>

        <LinearLayout
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:layout_below = "@+id/txtDivider1"
            android:id = "@+id/linear"
            android:orientation = "horizontal">

            <TextView
                android:layout_width = "fill_parent"
                android:layout_height = "wrap_content"
                android:layout_weight = ".75"
                android:gravity = "center"
                android:id = "@+id/txtCountryCode"
                android:paddingBottom = "10dp"
                android:paddingTop = "10dp"
                android:text = "+1"
                android:textColor = "@color/black"
                android:textSize = "@dimen/text_size2"/>

            <TextView
                android:layout_width = "1dp"
                android:layout_height = "match_parent"
                android:background = "#BABABA"
                android:id = "@+id/txtDivider2">
            </TextView>

            <EditText
                android:layout_width = "fill_parent"
                android:layout_height = "wrap_content"
                android:layout_weight = ".25"
                android:hint = "your phone number"
                android:id = "@+id/txtMobileNumber"
                android:inputType = "number">

                <requestFocus/>
            </EditText>
        </LinearLayout>

        <TextView
            android:layout_width = "fill_parent"
            android:layout_height = "1dp"
            android:layout_below = "@+id/linear"
            android:background = "#BABABA"
            android:id = "@+id/txtDivider3">
        </TextView>
    </RelativeLayout>

    <Button
        android:layout_width = "150dp"
        android:layout_height = "50dp"
        android:layout_below = "@+id/rel"
        android:layout_centerHorizontal = "true"
        android:layout_marginTop = "15dp"
        android:background = "@drawable/continue_button"
        android:id = "@+id/btnVCont"
        android:text = "@string/cont"
        android:textColor = "@color/white"
        android:textSize = "@dimen/text_size1"/>

    <RelativeLayout
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:background = "#5000"
        android:id = "@+id/loadingLayout"
        android:visibility = "gone">

        <ProgressBar
            style = "?android:attr/progressBarStyleLarge"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_centerHorizontal = "true"
            android:layout_centerVertical = "true"
            android:id = "@+id/progressBar"
            android:visibility = "visible"/>
    </RelativeLayout>

</RelativeLayout>